fix dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -88,6 +88,11 @@ html {
   line-height: 1.4;
   font-size: 16px;
   -webkit-text-size-adjust: 100%;
+  background-color: var(--vp-c-bg);
+}
+
+html[data-theme='dark'] {
+  background-color: var(--vp-c-bg-dark);
 }
 
 body {
@@ -100,7 +105,7 @@ body {
   font-size: 16px;
   font-weight: 400;
   /* color: var(--vp-c-text-1); */
-  background-color: var(--vp-c-bg);
+  /* background-color: var(--vp-c-bg); */
   direction: ltr;
   font-synthesis: style;
   text-rendering: optimizeLegibility;
